--- a/Neighborhoods in Toronto/Part_2.ipynb
+++ b/Neighborhoods in Toronto/Part_2.ipynb
@@ -8,8 +8,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Ignore jupyter notebook warnings"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "source": [
     "import warnings\r\n",
     "warnings.filterwarnings('ignore')"
@@ -26,13 +33,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "source": [
+    "import pandas as pd\r\n",
     "import requests\r\n",
-    "import pandas as pd"
+    "from bs4 import BeautifulSoup"
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Retrieve the data from the wikipedia page by using the BeautifulSoup library"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "url = \"https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\"\r\n",
+    "page = requests.get(url)\r\n",
+    "soup = BeautifulSoup(page.content, \"html.parser\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Scrap the info from the page and save it in the content list, composed of a dictionary"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "table = soup.find(\"table\")\r\n",
+    "content = []\r\n",
+    "for row in table.find_all(\"td\"):\r\n",
+    "    cell = {}\r\n",
+    "    if row.span.get_text() != 'Not assigned':\r\n",
+    "        cell['PostalCode'] = row.p.get_text()[:3]\r\n",
+    "        cell['Borough'] = row.span.get_text().split('(')[0]\r\n",
+    "        cell['Neighborhood'] = row.span.get_text().split('(')[1].strip(')').replace(' /',',').replace(')',' ').strip(' ')\r\n",
+    "        content.append(cell)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Save it into a dataframe and make some corrections"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "df_scrap = pd.DataFrame(content)\r\n",
+    "df_scrap['Borough'] = df_scrap['Borough'].replace({'Downtown TorontoStn A PO Boxes25 The Esplanade':'Downtown Toronto Stn A',\r\n",
+    "                                             'East TorontoBusiness reply mail Processing Centre969 Eastern':'East Toronto Business',\r\n",
+    "                                             'EtobicokeNorthwest':'Etobicoke Northwest','East YorkEast Toronto':'East York/East Toronto',\r\n",
+    "                                             'MississaugaCanada Post Gateway Processing Centre':'Mississauga'})"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Show the head of the dataframe"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "df_scrap.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  PostalCode           Borough                      Neighborhood\n",
+       "0        M3A        North York                         Parkwoods\n",
+       "1        M4A        North York                  Victoria Village\n",
+       "2        M5A  Downtown Toronto         Regent Park, Harbourfront\n",
+       "3        M6A        North York  Lawrence Manor, Lawrence Heights\n",
+       "4        M7A      Queen's Park     Ontario Provincial Government"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>Ontario Provincial Government</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Show the shape of the Dataframe"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "df_scrap.shape"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "markdown",
@@ -43,12 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "source": [
     "url = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0701EN-SkillsNetwork/labs_v1/Geospatial_Coordinates.csv\"\r\n",
-    "df = pd.read_csv(url)"
+    "df_coord = pd.read_csv(url)\r\n",
+    "df_coord.shape"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "metadata": {}
   },
   {
@@ -60,9 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "source": [
-    "df.head()"
+    "df_coord.head()"
    ],
    "outputs": [
     {
@@ -137,14 +339,204 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 9
     }
    ],
+   "metadata": {
+    "scrolled": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Adjust 'PostalCode' column name and Merge DataFrames"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "df_coord.rename({'Postal Code': 'PostalCode'}, axis='columns', inplace=True)\r\n",
+    "df_merged = pd.merge(df_scrap, df_coord, on='PostalCode')\r\n",
+    "df_merged"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "    PostalCode                Borough  \\\n",
+       "0          M3A             North York   \n",
+       "1          M4A             North York   \n",
+       "2          M5A       Downtown Toronto   \n",
+       "3          M6A             North York   \n",
+       "4          M7A           Queen's Park   \n",
+       "..         ...                    ...   \n",
+       "98         M8X              Etobicoke   \n",
+       "99         M4Y       Downtown Toronto   \n",
+       "100        M7Y  East Toronto Business   \n",
+       "101        M8Y              Etobicoke   \n",
+       "102        M8Z              Etobicoke   \n",
+       "\n",
+       "                                          Neighborhood   Latitude  Longitude  \n",
+       "0                                            Parkwoods  43.753259 -79.329656  \n",
+       "1                                     Victoria Village  43.725882 -79.315572  \n",
+       "2                            Regent Park, Harbourfront  43.654260 -79.360636  \n",
+       "3                     Lawrence Manor, Lawrence Heights  43.718518 -79.464763  \n",
+       "4                        Ontario Provincial Government  43.662301 -79.389494  \n",
+       "..                                                 ...        ...        ...  \n",
+       "98       The Kingsway, Montgomery Road, Old Mill North  43.653654 -79.506944  \n",
+       "99                                Church and Wellesley  43.665860 -79.383160  \n",
+       "100                                     Enclave of M4L  43.662744 -79.321558  \n",
+       "101  Old Mill South, King's Mill Park, Sunnylea, Hu...  43.636258 -79.498509  \n",
+       "102  Mimico NW, The Queensway West, South of Bloor,...  43.628841 -79.520999  \n",
+       "\n",
+       "[103 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
+       "      <td>43.654260</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Queen's Park</td>\n",
+       "      <td>Ontario Provincial Government</td>\n",
+       "      <td>43.662301</td>\n",
+       "      <td>-79.389494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>M8X</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>The Kingsway, Montgomery Road, Old Mill North</td>\n",
+       "      <td>43.653654</td>\n",
+       "      <td>-79.506944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>M4Y</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Church and Wellesley</td>\n",
+       "      <td>43.665860</td>\n",
+       "      <td>-79.383160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>M7Y</td>\n",
+       "      <td>East Toronto Business</td>\n",
+       "      <td>Enclave of M4L</td>\n",
+       "      <td>43.662744</td>\n",
+       "      <td>-79.321558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>M8Y</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Old Mill South, King's Mill Park, Sunnylea, Hu...</td>\n",
+       "      <td>43.636258</td>\n",
+       "      <td>-79.498509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>M8Z</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Mimico NW, The Queensway West, South of Bloor,...</td>\n",
+       "      <td>43.628841</td>\n",
+       "      <td>-79.520999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "6d3b99cc2c3d03415f0127cf60a3028d8bf13772d86834b3acb84349195a2805"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit"
+  },
   "language_info": {
    "name": "python",
    "version": "3.9.6",
@@ -156,13 +548,6 @@
    "pygments_lexer": "ipython3",
    "nbconvert_exporter": "python",
    "file_extension": ".py"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
-  },
-  "interpreter": {
-   "hash": "6d3b99cc2c3d03415f0127cf60a3028d8bf13772d86834b3acb84349195a2805"
   }
  },
  "nbformat": 4,
