--- a/Neighborhoods in Toronto/Part_3.ipynb
+++ b/Neighborhoods in Toronto/Part_3.ipynb
@@ -3741,11 +3741,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "source": [
     "toronto_merged.loc[toronto_merged['Cluster Labels'] == 2, toronto_merged.columns[[1] + list(range(5, toronto_merged.shape[1]))]]"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "        Borough  Cluster Labels 1st Most Common Venue 2nd Most Common Venue  \\\n",
+       "12  Scarborough             2.0                   Bar           Yoga Studio   \n",
+       "\n",
+       "        3rd Most Common Venue 4th Most Common Venue  \\\n",
+       "12  Middle Eastern Restaurant   Monument / Landmark   \n",
+       "\n",
+       "              5th Most Common Venue       6th Most Common Venue  \\\n",
+       "12  Molecular Gastronomy Restaurant  Modern European Restaurant   \n",
+       "\n",
+       "   7th Most Common Venue 8th Most Common Venue 9th Most Common Venue  \\\n",
+       "12     Mobile Phone Shop    Miscellaneous Shop    Mexican Restaurant   \n",
+       "\n",
+       "   10th Most Common Venue  \n",
+       "12                  Motel  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Cluster Labels</th>\n",
+       "      <th>1st Most Common Venue</th>\n",
+       "      <th>2nd Most Common Venue</th>\n",
+       "      <th>3rd Most Common Venue</th>\n",
+       "      <th>4th Most Common Venue</th>\n",
+       "      <th>5th Most Common Venue</th>\n",
+       "      <th>6th Most Common Venue</th>\n",
+       "      <th>7th Most Common Venue</th>\n",
+       "      <th>8th Most Common Venue</th>\n",
+       "      <th>9th Most Common Venue</th>\n",
+       "      <th>10th Most Common Venue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>Yoga Studio</td>\n",
+       "      <td>Middle Eastern Restaurant</td>\n",
+       "      <td>Monument / Landmark</td>\n",
+       "      <td>Molecular Gastronomy Restaurant</td>\n",
+       "      <td>Modern European Restaurant</td>\n",
+       "      <td>Mobile Phone Shop</td>\n",
+       "      <td>Miscellaneous Shop</td>\n",
+       "      <td>Mexican Restaurant</td>\n",
+       "      <td>Motel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
    "metadata": {}
   },
   {
